# TellMom

./: .env.example  .gitignore  LICENSE  README.md  RobloxChatCapture.lua  app.py  config.py  database.py  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
adapters/: __init__.py  base.py  client.py  main.py  minecraft_adapter.py  platforms.py  server.py
backend/: .env.example  README.md  backend.py  cache.py  classifier_client.py  config.py  docker-compose.yml  main.py  models.py  pyproject.toml  tui.py
backend/adapters/: base.py  discord.py  minecraft.py
backend/core/: cache.py  classifier_client.py  config.py  dependencies.py  jwt.py  registry.py
backend/database/: __init__.py  child_safety.db  models.py  session.py
backend/frontend/: index.html
backend/lm/: learner.py  server.py  test_inference.py
backend/models/: message.py  user.py
backend/routers/: alerts.py  auth.py  children.py  classifier.py  flags.py  ingest.py  management.py  message.py  parent.py
backend/routes/: alerts.py  auth.py
backend/schemas/: alerts.py  auth.py  children.py  classifier.py  flags.py  grooming.py  ingest.py
backend/services/: auth.py  classifier_stream.py  explanation.py  grooming_detector.py  grooming_prompt.py  ingest.py  messages.py  notifications.py  proxy_agent.py  proxy_manager.py  session_security.py  stream_security.py
colab/: .env.example  config.py  model.py  pedophile.ipynb  pyproject.toml  server.py  training.ipynb  utils.py
colab/checkpoints/: scaler_simcse_base_roberta.joblib
colab/notebooks/: inference.ipynb  training.ipynb
(+166 files in other folders)
