[project]
name = "colab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface>=0.0.1",
    "joblib>=1.5.3",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "websocket-client>=1.9.0",
]
